deploy/cdk/cdk.out/ProjexInfra-staging.template.json
{
 "Resources": {
  "ProjexVpcCB3A565C": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "ProjexInfra-staging/ProjexVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProjexInfra-staging/ProjexVpc/Resource"
   }
  },
  "ProjexVpcpublicSubnet1Subnet362C5EFC": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "ProjexInfra-staging/ProjexVpc/publicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "ProjexVpcCB3A565C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjexInfra-staging/ProjexVpc/publicSubnet1/Subnet"
   }
  },
  "ProjexVpcpublicSubnet1RouteTable7C57B31A": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ProjexInfra-staging/ProjexVpc/publicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "ProjexVpcCB3A565C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjexInfra-staging/ProjexVpc/publicSubnet1/RouteTable"
   }
  },
  "ProjexVpcpublicSubnet1RouteTableAssociationA6F35343": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "ProjexVpcpublicSubnet1RouteTable7C57B31A"
    },
    "SubnetId": {
     "Ref": "ProjexVpcpublicSubnet1Subnet362C5EFC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjexInfra-staging/ProjexVpc/publicSubnet1/RouteTableAssociation"
   }
  },
  "ProjexVpcpublicSubnet1DefaultRoute1B63A41F": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "ProjexVpcIGW5C3FEC0A"
    },
    "RouteTableId": {
     "Ref": "ProjexVpcpublicSubnet1RouteTable7C57B31A"
    }
   },
   "DependsOn": [
    "ProjexVpcVPCGW234CA34C"
   ],
   "Metadata": {
    "aws:cdk:path": "ProjexInfra-staging/ProjexVpc/publicSubnet1/DefaultRoute"
   }
  },
  "ProjexVpcpublicSubnet2Subnet82EDECCD": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "ProjexInfra-staging/ProjexVpc/publicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "ProjexVpcCB3A565C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjexInfra-staging/ProjexVpc/publicSubnet2/Subnet"
   }
  },
  "ProjexVpcpublicSubnet2RouteTable0BC8D82F": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ProjexInfra-staging/ProjexVpc/publicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "ProjexVpcCB3A565C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjexInfra-staging/ProjexVpc/publicSubnet2/RouteTable"
   }
  },
  "ProjexVpcpublicSubnet2RouteTableAssociation11AEDFEC": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "ProjexVpcpublicSubnet2RouteTable0BC8D82F"
    },
    "SubnetId": {
     "Ref": "ProjexVpcpublicSubnet2Subnet82EDECCD"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjexInfra-staging/ProjexVpc/publicSubnet2/RouteTableAssociation"
   }
  },
  "ProjexVpcpublicSubnet2DefaultRouteDC4F6478": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "ProjexVpcIGW5C3FEC0A"
    },
    "RouteTableId": {
     "Ref": "ProjexVpcpublicSubnet2RouteTable0BC8D82F"
    }
   },
   "DependsOn": [
    "ProjexVpcVPCGW234CA34C"
   ],
   "Metadata": {
    "aws:cdk:path": "ProjexInfra-staging/ProjexVpc/publicSubnet2/DefaultRoute"
   }
  },
  "ProjexVpcdbisolatedSubnet1Subnet227E91A6": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.2.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "db-isolated"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "ProjexInfra-staging/ProjexVpc/db-isolatedSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "ProjexVpcCB3A565C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjexInfra-staging/ProjexVpc/db-isolatedSubnet1/Subnet"
   }
  },
  "ProjexVpcdbisolatedSubnet1RouteTableC3BD7D2A": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ProjexInfra-staging/ProjexVpc/db-isolatedSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "ProjexVpcCB3A565C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjexInfra-staging/ProjexVpc/db-isolatedSubnet1/RouteTable"
   }
  },
  "ProjexVpcdbisolatedSubnet1RouteTableAssociation69AA2B8F": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "ProjexVpcdbisolatedSubnet1RouteTableC3BD7D2A"
    },
    "SubnetId": {
     "Ref": "ProjexVpcdbisolatedSubnet1Subnet227E91A6"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjexInfra-staging/ProjexVpc/db-isolatedSubnet1/RouteTableAssociation"
   }
  },
  "ProjexVpcdbisolatedSubnet2Subnet3700F906": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.3.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "db-isolated"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "ProjexInfra-staging/ProjexVpc/db-isolatedSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "ProjexVpcCB3A565C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjexInfra-staging/ProjexVpc/db-isolatedSubnet2/Subnet"
   }
  },
  "ProjexVpcdbisolatedSubnet2RouteTable7583E20C": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ProjexInfra-staging/ProjexVpc/db-isolatedSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "ProjexVpcCB3A565C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjexInfra-staging/ProjexVpc/db-isolatedSubnet2/RouteTable"
   }
  },
  "ProjexVpcdbisolatedSubnet2RouteTableAssociationD9ECB8F6": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "ProjexVpcdbisolatedSubnet2RouteTable7583E20C"
    },
    "SubnetId": {
     "Ref": "ProjexVpcdbisolatedSubnet2Subnet3700F906"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjexInfra-staging/ProjexVpc/db-isolatedSubnet2/RouteTableAssociation"
   }
  },
  "ProjexVpcIGW5C3FEC0A": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ProjexInfra-staging/ProjexVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProjexInfra-staging/ProjexVpc/IGW"
   }
  },
  "ProjexVpcVPCGW234CA34C": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "ProjexVpcIGW5C3FEC0A"
    },
    "VpcId": {
     "Ref": "ProjexVpcCB3A565C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjexInfra-staging/ProjexVpc/VPCGW"
   }
  },
  "ProjexAppSg6D2CECB1": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Projex app server SG",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "HTTP",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "HTTPS",
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "VpcId": {
     "Ref": "ProjexVpcCB3A565C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjexInfra-staging/ProjexAppSg/Resource"
   }
  },
  "ProjexDbSg3D618562": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Projex postgres SG",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "ProjexVpcCB3A565C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjexInfra-staging/ProjexDbSg/Resource"
   }
  },
  "ProjexDbSgfromProjexInfrastagingProjexAppSg4F5C7AD1543240206C3F": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "App to Postgres",
    "FromPort": 5432,
    "GroupId": {
     "Fn::GetAtt": [
      "ProjexDbSg3D618562",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "ProjexAppSg6D2CECB1",
      "GroupId"
     ]
    },
    "ToPort": 5432
   },
   "Metadata": {
    "aws:cdk:path": "ProjexInfra-staging/ProjexDbSg/from ProjexInfrastagingProjexAppSg4F5C7AD1:5432"
   }
  },
  "ProjexEc2RoleBF099E3E": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ec2.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonSSMManagedInstanceCore"
       ]
      ]
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProjexInfra-staging/ProjexEc2Role/Resource"
   }
  },
  "ProjexEc2RoleDefaultPolicyD46A742A": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "secretsmanager:GetSecretValue",
        "secretsmanager:DescribeSecret"
       ],
       "Effect": "Allow",
       "Resource": {
        "Ref": "ProjexPostgresSecretAttachmentF6621C78"
       }
      },
      {
       "Action": [
        "s3:GetObject*",
        "s3:GetBucket*",
        "s3:List*",
        "s3:DeleteObject*",
        "s3:PutObject",
        "s3:PutObjectLegalHold",
        "s3:PutObjectRetention",
        "s3:PutObjectTagging",
        "s3:PutObjectVersionTagging",
        "s3:Abort*"
       ],
       "Effect": "Allow",
       "Resource": [
        {
         "Fn::GetAtt": [
          "ProjexExportBucket231BB74F",
          "Arn"
         ]
        },
        {
         "Fn::Join": [
          "",
          [
           {
            "Fn::GetAtt": [
             "ProjexExportBucket231BB74F",
             "Arn"
            ]
           },
           "/*"
          ]
         ]
        }
       ]
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "ProjexEc2RoleDefaultPolicyD46A742A",
    "Roles": [
     {
      "Ref": "ProjexEc2RoleBF099E3E"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProjexInfra-staging/ProjexEc2Role/DefaultPolicy/Resource"
   }
  },
  "ProjexEc2InstanceProfile0AD1F7C3": {
   "Type": "AWS::IAM::InstanceProfile",
   "Properties": {
    "Roles": [
     {
      "Ref": "ProjexEc2RoleBF099E3E"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProjexInfra-staging/ProjexEc2/InstanceProfile"
   }
  },
  "ProjexEc278808BF5": {
   "Type": "AWS::EC2::Instance",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "BlockDeviceMappings": [
     {
      "DeviceName": "/dev/xvda",
      "Ebs": {
       "Encrypted": true,
       "VolumeSize": 20,
       "VolumeType": "gp3"
      }
     }
    ],
    "IamInstanceProfile": {
     "Ref": "ProjexEc2InstanceProfile0AD1F7C3"
    },
    "ImageId": {
     "Ref": "SsmParameterValueawsserviceamiamazonlinuxlatestal2023amikernel61arm64C96584B6F00A464EAD1953AFF4B05118Parameter"
    },
    "InstanceType": "t4g.small",
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "ProjexAppSg6D2CECB1",
       "GroupId"
      ]
     }
    ],
    "SubnetId": {
     "Ref": "ProjexVpcpublicSubnet1Subnet362C5EFC"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "ProjexInfra-staging/ProjexEc2"
     }
    ],
    "UserData": {
     "Fn::Base64": "#!/bin/bash\nset -euxo pipefail\ndnf update -y || yum update -y\ndnf install -y git nginx || yum install -y git nginx\ncurl -fsSL https://rpm.nodesource.com/setup_22.x | bash -\ndnf install -y nodejs || yum install -y nodejs\nsystemctl enable nginx\nsystemctl start nginx\necho \"Projex instance bootstrap complete\" > /var/log/projex-bootstrap.log"
    }
   },
   "DependsOn": [
    "ProjexEc2RoleDefaultPolicyD46A742A",
    "ProjexEc2RoleBF099E3E"
   ],
   "Metadata": {
    "aws:cdk:path": "ProjexInfra-staging/ProjexEc2/Resource"
   }
  },
  "ProjexEip": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc"
   },
   "Metadata": {
    "aws:cdk:path": "ProjexInfra-staging/ProjexEip"
   }
  },
  "ProjexEipAssociation": {
   "Type": "AWS::EC2::EIPAssociation",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "ProjexEip",
      "AllocationId"
     ]
    },
    "InstanceId": {
     "Ref": "ProjexEc278808BF5"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjexInfra-staging/ProjexEipAssociation"
   }
  },
  "ProjexPostgresSubnetGroupA91668E2": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for ProjexPostgres database",
    "SubnetIds": [
     {
      "Ref": "ProjexVpcdbisolatedSubnet1Subnet227E91A6"
     },
     {
      "Ref": "ProjexVpcdbisolatedSubnet2Subnet3700F906"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProjexInfra-staging/ProjexPostgres/SubnetGroup/Default"
   }
  },
  "ProjexInfrastagingProjexPostgresSecretDC68C0623fdaad7efa858a3daf9490cf0a702aeb": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "Description": {
     "Fn::Join": [
      "",
      [
       "Generated by the CDK for stack: ",
       {
        "Ref": "AWS::StackName"
       }
      ]
     ]
    },
    "GenerateSecretString": {
     "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
     "GenerateStringKey": "password",
     "PasswordLength": 30,
     "SecretStringTemplate": "{\"username\":\"projex_app\"}"
    },
    "Name": "projex/staging/db-credentials"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "ProjexInfra-staging/ProjexPostgres/Secret/Resource"
   }
  },
  "ProjexPostgresSecretAttachmentF6621C78": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "ProjexInfrastagingProjexPostgresSecretDC68C0623fdaad7efa858a3daf9490cf0a702aeb"
    },
    "TargetId": {
     "Ref": "ProjexPostgres418F02DE"
    },
    "TargetType": "AWS::RDS::DBInstance"
   },
   "Metadata": {
    "aws:cdk:path": "ProjexInfra-staging/ProjexPostgres/Secret/Attachment/Resource"
   }
  },
  "ProjexPostgres418F02DE": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "AllocatedStorage": "20",
    "BackupRetentionPeriod": 1,
    "CopyTagsToSnapshot": true,
    "DBInstanceClass": "db.t4g.micro",
    "DBName": "projex",
    "DBSubnetGroupName": {
     "Ref": "ProjexPostgresSubnetGroupA91668E2"
    },
    "DeleteAutomatedBackups": true,
    "DeletionProtection": false,
    "Engine": "postgres",
    "EngineVersion": "16",
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "ProjexInfrastagingProjexPostgresSecretDC68C0623fdaad7efa858a3daf9490cf0a702aeb"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MasterUsername": "projex_app",
    "MultiAZ": false,
    "PubliclyAccessible": false,
    "StorageEncrypted": true,
    "StorageType": "gp3",
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "ProjexDbSg3D618562",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "ProjexInfra-staging/ProjexPostgres/Resource"
   }
  },
  "ProjexExportBucket231BB74F": {
   "Type": "AWS::S3::Bucket",
   "Properties": {
    "BucketEncryption": {
     "ServerSideEncryptionConfiguration": [
      {
       "ServerSideEncryptionByDefault": {
        "SSEAlgorithm": "AES256"
       }
      }
     ]
    },
    "LifecycleConfiguration": {
     "Rules": [
      {
       "AbortIncompleteMultipartUpload": {
        "DaysAfterInitiation": 1
       },
       "ExpirationInDays": 3,
       "Id": "ExpireStaleExports",
       "Status": "Enabled"
      }
     ]
    },
    "PublicAccessBlockConfiguration": {
     "BlockPublicAcls": true,
     "BlockPublicPolicy": true,
     "IgnorePublicAcls": true,
     "RestrictPublicBuckets": true
    },
    "Tags": [
     {
      "Key": "aws-cdk:auto-delete-objects",
      "Value": "true"
     }
    ]
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "ProjexInfra-staging/ProjexExportBucket/Resource"
   }
  },
  "ProjexExportBucketPolicyC5B2135B": {
   "Type": "AWS::S3::BucketPolicy",
   "Properties": {
    "Bucket": {
     "Ref": "ProjexExportBucket231BB74F"
    },
    "PolicyDocument": {
     "Statement": [
      {
       "Action": "s3:*",
       "Condition": {
        "Bool": {
         "aws:SecureTransport": "false"
        }
       },
       "Effect": "Deny",
       "Principal": {
        "AWS": "*"
       },
       "Resource": [
        {
         "Fn::GetAtt": [
          "ProjexExportBucket231BB74F",
          "Arn"
         ]
        },
        {
         "Fn::Join": [
          "",
          [
           {
            "Fn::GetAtt": [
             "ProjexExportBucket231BB74F",
             "Arn"
            ]
           },
           "/*"
          ]
         ]
        }
       ]
      },
      {
       "Action": [
        "s3:PutBucketPolicy",
        "s3:GetBucket*",
        "s3:List*",
        "s3:DeleteObject*"
       ],
       "Effect": "Allow",
       "Principal": {
        "AWS": {
         "Fn::GetAtt": [
          "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
          "Arn"
         ]
        }
       },
       "Resource": [
        {
         "Fn::GetAtt": [
          "ProjexExportBucket231BB74F",
          "Arn"
         ]
        },
        {
         "Fn::Join": [
          "",
          [
           {
            "Fn::GetAtt": [
             "ProjexExportBucket231BB74F",
             "Arn"
            ]
           },
           "/*"
          ]
         ]
        }
       ]
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjexInfra-staging/ProjexExportBucket/Policy/Resource"
   }
  },
  "ProjexExportBucketAutoDeleteObjectsCustomResource6B4C1FBA": {
   "Type": "Custom::S3AutoDeleteObjects",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "CustomS3AutoDeleteObjectsCustomResourceProviderHandler9D90184F",
      "Arn"
     ]
    },
    "BucketName": {
     "Ref": "ProjexExportBucket231BB74F"
    }
   },
   "DependsOn": [
    "ProjexExportBucketPolicyC5B2135B"
   ],
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "ProjexInfra-staging/ProjexExportBucket/AutoDeleteObjectsCustomResource/Default"
   }
  },
  "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Version": "2012-10-17",
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ]
    },
    "ManagedPolicyArns": [
     {
      "Fn::Sub": "arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProjexInfra-staging/Custom::S3AutoDeleteObjectsCustomResourceProvider/Role"
   }
  },
  "CustomS3AutoDeleteObjectsCustomResourceProviderHandler9D90184F": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": {
      "Fn::Sub": "cdk-hnb659fds-assets-${AWS::AccountId}-ap-southeast-2"
     },
     "S3Key": "faa95a81ae7d7373f3e1f242268f904eb748d8d0fdd306e8a6fe515a1905a7d6.zip"
    },
    "Timeout": 900,
    "MemorySize": 128,
    "Handler": "index.handler",
    "Role": {
     "Fn::GetAtt": [
      "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
      "Arn"
     ]
    },
    "Runtime": "nodejs22.x",
    "Description": {
     "Fn::Join": [
      "",
      [
       "Lambda function for auto-deleting objects in ",
       {
        "Ref": "ProjexExportBucket231BB74F"
       },
       " S3 bucket."
      ]
     ]
    }
   },
   "DependsOn": [
    "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092"
   ],
   "Metadata": {
    "aws:cdk:path": "ProjexInfra-staging/Custom::S3AutoDeleteObjectsCustomResourceProvider/Handler",
    "aws:asset:path": "asset.faa95a81ae7d7373f3e1f242268f904eb748d8d0fdd306e8a6fe515a1905a7d6",
    "aws:asset:property": "Code"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/5VSy27CMBD8Fjgbtw1ClXrjUSFORARxqapqY5bUkNjIu4aiKP9eJQaS9lCppx3P7HsdyWj0LB97cKaB2h4GuU5lmTCog4AzfZSoIllujkpMd2YTT0Xs01yrxKcGueZatLKecQ1pji3fcmMiqzSwtubuLGKnT8DY5lgYRmeQ58B4hsu16PU1Zgb1WaBhkaDyTvNl7qw/NuX+JBYmc0gkFoYYjMJQqsWvi/hqOm1WQkMhy5UNAzU2trlWTVstuiWKnd3pHCvhtiTLGTCkQHgvE4a89zebdImbd4LKhU3MJrfISlDDUgEGMnSyDOPVjsGswWXInfXcHX4rlaChLCdeHUKVgN7KfqG/tOm/9LvfoL4/DWUjkQyuY892hjkyLtM9KqZ+9S6C1G6k+/5H7hCQMDDWvdapq0qskKx34U4xOCiQ0YmpJ7ZFV2vxDyl29qS36CZAKMZEy [...]
   },
   "Metadata": {
    "aws:cdk:path": "ProjexInfra-staging/CDKMetadata/Default"
   }
  }
 },
 "Parameters": {
  "SsmParameterValueawsserviceamiamazonlinuxlatestal2023amikernel61arm64C96584B6F00A464EAD1953AFF4B05118Parameter": {
   "Type": "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>",
   "Default": "/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-arm64"
  },
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Outputs": {
  "VpcId": {
   "Value": {
    "Ref": "ProjexVpcCB3A565C"
   }
  },
  "Ec2InstanceId": {
   "Value": {
    "Ref": "ProjexEc278808BF5"
   }
  },
  "Ec2PublicIp": {
   "Value": {
    "Ref": "ProjexEip"
   }
  },
  "DbEndpointAddress": {
   "Value": {
    "Fn::GetAtt": [
     "ProjexPostgres418F02DE",
     "Endpoint.Address"
    ]
   }
  },
  "DbEndpointPort": {
   "Value": {
    "Fn::GetAtt": [
     "ProjexPostgres418F02DE",
     "Endpoint.Port"
    ]
   }
  },
  "DbSecretArn": {
   "Description": "Secrets Manager ARN containing db username/password",
   "Value": {
    "Ref": "ProjexPostgresSecretAttachmentF6621C78"
   }
  },
  "ExportBucketName": {
   "Description": "S3 bucket for company export workbook objects",
   "Value": {
    "Ref": "ProjexExportBucket231BB74F"
   }
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
